--- a/login.css
+++ b/login.css
@@ -22,6 +22,7 @@ body {
     box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 1px rgba(10,10,10,.02);
     width: 100%;
     max-width: 400px;
+    position: relative;
 }
 
 .login-form {
@@ -77,9 +78,8 @@ button:hover {
 .form-links {
     position: absolute;
     text-align: center;
-    bottom: 45%;
+    bottom: -10%;
 }
-
 .form-links a {
     color: #58a6ff;
     text-decoration: none;
