--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
     transition: background-color 0.3s ease;
@@ -87,7 +87,7 @@ nav ul li a:hover {
     display: flex;
     justify-content: space-between;
     margin: 20px;
-    margin-top: -27%;
+    margin-top: -50%;
     padding: 3rem;
     z-index: 2;
 }
@@ -128,7 +128,7 @@ nav ul li a:hover {
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
-    background-color: rgba(14, 39, 64, .45);
+    background-color: rgba(104, 117, 131, 0.45);
     padding: 15px;
     border-radius: 5px;
     justify-content: space-between;
@@ -160,7 +160,7 @@ nav ul li a:hover {
     text-align: left;
     margin-bottom: 20px;
     position: relative;
-    padding-bottom: 5px;
+    padding-bottom: 1px;
 }
 
 .section-heading h2 {
@@ -174,7 +174,7 @@ nav ul li a:hover {
     display: block;
     width: 100%;
     height: 2px;
-    background-color: lightblue;
+    background-color: darkcyan;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -216,7 +216,7 @@ nav ul li a:hover {
 
 .image-banner {
     position: relative; /* Needed for absolute positioning of the overlay */
-    height: 50vh; /* Set height to 50% of the viewport height */
+    height: 100vh; /* Set height to 50% of the viewport height */
     overflow: hidden; /* Hide overflow from the video */
 }
 
@@ -230,7 +230,7 @@ nav ul li a:hover {
     height: auto; /* Maintain aspect ratio */
     transform: translate(-50%, -50%); /* Center the video */
     z-index: 1; /* Place the video behind the overlay */
-    opacity: 0.3; /* Set video transparency to 30% (70% transparent) */
+    opacity: 0.5; /* Set video transparency to 30% (70% transparent) */
 }
 
 
