--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@
 
 body {
     font-family:  BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
-    background-color: #06121e;
-    color: #fff;
+    background-color: rgb(14, 46, 66);
     color: #fff;
     font-size: 1em;
     font-weight: 400;
@@ -33,6 +32,7 @@ header {
 .logo {
     margin-right: 40px;
 }
+
 
 .logo a {
     font-size: 24px;
@@ -173,8 +173,8 @@ nav ul li a:hover {
     content: "";
     display: block;
     width: 100%;
-    height: 2px;
-    background-color: darkcyan;
+    height: 1px;
+    background-color: white;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -216,7 +216,7 @@ nav ul li a:hover {
 
 .image-banner {
     position: relative; /* Needed for absolute positioning of the overlay */
-    height: 100vh; /* Set height to 50% of the viewport height */
+    height: 99vh; /* Set height to 50% of the viewport height */
     overflow: hidden; /* Hide overflow from the video */
 }
 
